...
                    if viewModel.showClosedProjects == false {
                        Button {
                            withAnimation {
                                viewModel.addItem(to: project)
                            }
                        } label: {
                            Label("Add New Item", systemImage: "plus")
                        }
                    }
                }
            }
        }
        .listStyle(InsetGroupedListStyle())
...
                }
            }
            .toolbar {
                addProjectToolbarItem
                sortToolbarItem
            }
            .navigationTitle(viewModel.showClosedProjects ? "Closed Projects" : "Open Projects")
            .actionSheet(isPresented: $viewModel.showingSortOrder) {
                ActionSheet(title: Text("Sort items"), message: nil, buttons: [
                    .default(Text("Optimized"), action: { viewModel.sortOrder = .optimized}),
                    .default(Text("Creation Date"), action: { viewModel.sortOrder = .creationDate}),
                    .default(Text("Title"), action: { viewModel.sortOrder = .title})
                ])
...
